--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,11 @@ workflow:
 
 # gunakan string commit untuk nama folder(environment) yang unik
 
-#variables:
+variables:
+  env: /home/gitlab-runner/
+  scripts_path: /home/gitlab-runner/environment/scripts
+  vm_path: /home/gitlab-runner/environment/vm
+  vm: /home/gitlab-runner/environment/vm.yaml
 #  env_name: $GITLAB_USER_LOGIN
 
 stages:
@@ -18,7 +22,8 @@ stages:
   - plan
 #  - notif
   - apply
-  - config-monitoring
+  # - config-monitoring
+  - install-node-exporter
   - nat
   - destroy
 
@@ -29,11 +34,11 @@ job-generate:
       - vm.yaml
   script:
     - echo "copy branch contents"
-    - cp -r * /home/gitlab-runner/environment
+    - cp -r * $env
     - echo "copy python-tfgen scripts and provider locally"
-    - cp -r /home/gitlab-runner/environment/scripts/python-tfgen/ /home/gitlab-runner/environment/
+    - cp -r $scripts_path/python-tfgen/ $env
     - echo "generate updated vm.yaml"
-    - cd /home/gitlab-runner/environment
+    - cd $env
     - ./python-tfgen/tfgen.py -f vm.yaml -o vm
   tags: [kvm]
 
@@ -44,7 +49,7 @@ job-init:
     changes:
       - vm.yaml
   script:
-    - cd /home/gitlab-runner/environment/vm
+    - cd $vm_path
     - echo "init $(pwd)"
     - terraform init
   tags: [kvm]
@@ -55,7 +60,7 @@ job-validate:
     changes:
       - vm.yaml
   script:
-    - cd /home/gitlab-runner/environment/vm
+    - cd $vm_path
     - echo "validate $(pwd)"
     - terraform validate
   tags: [kvm]
@@ -66,7 +71,7 @@ job-plan:
     changes:
       - vm.yaml
   script:
-    - cd /home/gitlab-runner/environment/vm
+    - cd $vm_path
     - echo "planning $(pwd)"
     - terraform plan
     - terraform plan -out tfgen
@@ -79,13 +84,13 @@ job-apply:
    changes:
      - vm.yaml
  script:
-   - cd /home/gitlab-runner/environment/vm
+   - cd $vm_path
    - echo "apply $(pwd)"
    - terraform apply -auto-approve
  tags: [kvm]
 
 job-config-monitoring:
-  stage: config-monitoring
+  stage: install-node-exporter
   allow_failure: true
   only:
     changes:
@@ -93,9 +98,10 @@ job-config-monitoring:
   when: delayed
   start_in: 1 minute
   script:
-    - cd /home/gitlab-runner/environment/scripts
-    - ./run_install_node_exporter.py -f /home/gitlab-runner/environment/vm.yaml -k dwara.pem
+    - cd $scripts_path
+    - ./run_install_node_exporter.py -f $vm -k dwara.pem
   tags: [kvm]
+  stage: 
 
 job-nat:
   stage: nat
@@ -103,8 +109,8 @@ job-nat:
     changes:
       - nat.yaml
   script:
-    - cp nat.yaml /home/gitlab-runner/environment/scripts/nat.yaml
-    - cd /home/gitlab-runner/environment/scripts
+    - cp nat.yaml $scripts_path/nat.yaml
+    - cd $scripts_path
     - ./apply_nat.py nat.yaml
   tags: [nat]
 
@@ -114,14 +120,11 @@ job-destroy:
     changes:
       - vm.yaml
   script:
-    - cd /home/gitlab-runner/environment/vm
+    - cd $vm_path
     - echo "destroying all vm.yaml"
     - terraform destroy -auto-approve
-    - cd /home/gitlab-runner/environment
-    # - ./delete-rules-iptables.sh env-$env_name.txt
+    - cd $env
     - echo "destroy success"
-    # - cd /home/gitlab-runner/environment
-    # - ./notif-destroy.sh
   when: manual
   tags: [kvm]
 
