--- a/nat.yaml
+++ b/nat.yaml
@@ -9,3 +9,7 @@
 - forwarding: 11902
   target_ip: 192.168.100.202
   target_port: 22
+
+- forwarding: 11902
+  target_ip: 192.168.100.203
+  target_port: 22
