--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 workflow:
   rules:
-  # jika bukan di branch main, jangan run pipeline
-  - if: $CI_COMMIT_BRANCH != "main"
-    when: never
+  # # jika bukan di branch main, jangan run pipeline
+  # - if: $CI_COMMIT_BRANCH != "main"
+  #   when: never
   - exists:
     - vm.yaml
 
