--- a/vm.yaml
+++ b/vm.yaml
@@ -101,7 +101,7 @@ spec:
         dns: [8.8.8.8, 8.8.4.4]
 ################### VM febryan #####################
 
-################### VM Ahsan ######################
+################### VM Ahsan #####################
   - name: ahs-vm1
     hostname: ahs-vm1
     nested_enabled: true
