testing no values in vm.yaml

--- a/vm.yaml
+++ b/vm.yaml
@@ -1,5 +1,5 @@
-kind: vm
-spec:
+# kind: vm
+# spec:
 # ##################### VM Iqbal ##################
 #   - name: iqbal-vm2
 #     hostname: iqbal-vm2
