--- a/nat.yaml
+++ b/nat.yaml
@@ -5,3 +5,7 @@
 - forwarding: 11905
   target_ip: 192.168.100.202
   target_port: 22
+
+- forwarding: 11907
+  target_ip: 192.168.100.123
+  target_port: 22 
