--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,110 +1,117 @@
+# You can override the included template(s) by including variable overrides
+# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
+# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/#customizing-settings
+# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
+# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
+# Note that environment variables can be set in several places
+# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 workflow:
   rules:
   - if: $CI_COMMIT_BRANCH != "main"
     when: never
   - exists:
     - vm.yaml
-
 variables:
-  env: /home/gitlab-runner/environment
-  scripts_path: /home/gitlab-runner/environment/scripts
-  vm_path: /home/gitlab-runner/environment/vm
-  vm: /home/gitlab-runner/environment/vm.yaml
-  prom: /etc/prometheus/prometheus.yml
-
+  env: "/home/gitlab-runner/environment"
+  scripts_path: "/home/gitlab-runner/environment/scripts"
+  vm_path: "/home/gitlab-runner/environment/vm"
+  vm: "/home/gitlab-runner/environment/vm.yaml"
+  prom: "/etc/prometheus/prometheus.yml"
 stages:
-  - generate
-  - validate
-  - plan
-  - apply
-  - config-monitoring
-  - nat
-
+- generate
+- validate
+- plan
+- apply
+- config-monitoring
+- nat
 job-generate:
   stage: generate
   only:
     changes:
-      - vm.yaml
+    - vm.yaml
   script:
-    - echo "copy branch contents"
-    - cp -r * $env
-    - echo "copy python-tfgen scripts and provider locally"
-    - cp -r $scripts_path/python-tfgen/ $env
-    - echo "generate updated vm.yaml"
-    - cd $env
-    - echo yes | ./python-tfgen/tfgen.py -f vm.yaml -o $vm_path
-  tags: [kvm]
-
+  - echo "copy branch contents"
+  - cp -r * $env
+  - echo "copy python-tfgen scripts and provider locally"
+  - cp -r $scripts_path/python-tfgen/ $env
+  - echo "generate updated vm.yaml"
+  - cd $env
+  - echo yes | ./python-tfgen/tfgen.py -f vm.yaml -o $vm_path
+  tags:
+  - kvm
 job-validate:
   stage: validate
   only:
     changes:
-      - vm.yaml
+    - vm.yaml
   script:
-    - cd $vm_path
-    - echo "validate $(pwd)"
-    - terraform validate
-  tags: [kvm]
-
+  - cd $vm_path
+  - echo "validate $(pwd)"
+  - terraform validate
+  tags:
+  - kvm
 job-plan:
   stage: plan
   only:
     changes:
-      - vm.yaml
+    - vm.yaml
   script:
-    - cd $vm_path
-    - echo "planning $(pwd)"
-    - terraform plan
-    - terraform plan -out tfgen
-  tags: [kvm]
-
+  - cd $vm_path
+  - echo "planning $(pwd)"
+  - terraform plan
+  - terraform plan -out tfgen
+  tags:
+  - kvm
 job-apply:
- stage: apply
- allow_failure: true
- only:
-   changes:
-     - vm.yaml
- script:
-   - cd $vm_path
-   - echo "apply $(pwd)"
-   - terraform apply -auto-approve
- tags: [kvm]
-
+  stage: apply
+  allow_failure: true
+  only:
+    changes:
+    - vm.yaml
+  script:
+  - cd $vm_path
+  - echo "apply $(pwd)"
+  - terraform apply -auto-approve
+  tags:
+  - kvm
 job-config-node-exporter:
   stage: config-monitoring
   allow_failure: true
   only:
     changes:
-      - vm.yaml
+    - vm.yaml
   when: delayed
   start_in: 1 minute
   script:
-    - cd $scripts_path
-    - ./run_install_node_exporter.py -f $vm -k dwara.pem
-  tags: [kvm]
-
+  - cd $scripts_path
+  - "./run_install_node_exporter.py -f $vm -k dwara.pem"
+  tags:
+  - kvm
 job-config-prom:
   stage: config-monitoring
   allow_failure: true
   only:
     changes:
-      - vm.yaml
+    - vm.yaml
   when: delayed
   start_in: 20 seconds
   script:
-    - cd $scripts_path
-    - ./apply_prom.py -f $vm -fp $prom
-  needs: 
-    - job: job-config-node-exporter
-  tags: [kvm]
-
+  - cd $scripts_path
+  - "./apply_prom.py -f $vm -fp $prom"
+  needs:
+  - job: job-config-node-exporter
+  tags:
+  - kvm
 job-nat:
   stage: nat
   only:
     changes:
-      - nat.yaml
+    - nat.yaml
   script:
-    - cp nat.yaml $scripts_path/nat.yaml
-    - cd $scripts_path
-    - ./apply_nat.py -f nat.yaml
-  tags: [nat]
+  - cp nat.yaml $scripts_path/nat.yaml
+  - cd $scripts_path
+  - "./apply_nat.py -f nat.yaml"
+  tags:
+  - nat
+include:
+- template: Security/Secret-Detection.gitlab-ci.yml
