--- a/nat.yaml
+++ b/nat.yaml
@@ -5,3 +5,7 @@
 - forwarding: 11905
   target_ip: 192.168.100.202
   target_port: 22
+
+- forwarding: 10177
+  target_ip: 10.30.13.177
+  target_port: 22
